Both files added successfully and 2nd commit

--- a/lol.htm
+++ b/lol.htm
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Learning GIT</h1>
-    <h2>Test Case</h2>
+    <h1>My 2nd File</h1>
 </body>
 </html>
